@@ -229,7 +229,8 @@ public class OfficeParser extends AbstractParser {
         OUTLOOK("msg", MediaType.application("vnd.ms-outlook")),
         SOLIDWORKS_PART("sldprt", MediaType.application("sldworks")),
         SOLIDWORKS_ASSEMBLY("sldasm", MediaType.application("sldworks")),
-        SOLIDWORKS_DRAWING("slddrw", MediaType.application("sldworks"));
+        SOLIDWORKS_DRAWING("slddrw", MediaType.application("sldworks")),
+        GRAPH("", MediaType.application("vnd.ms-graph"));
 
         private final String extension;
         private final MediaType type;
